--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -1,5 +1,7 @@
+@import 'base/base.scss';
+
 .App {
-  text-align: center;
+  text-align:left;
 }
 
 .App-logo {
@@ -7,11 +9,7 @@
   pointer-events: none;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
+
 
 .App-header {
   background-color: #282c34;
@@ -28,11 +26,4 @@
   color: #61dafb;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-}
+
