--- a/src/sass/layout/_header.scss
+++ b/src/sass/layout/_header.scss
@@ -1,5 +1,5 @@
-.title{
-    padding: 1rem;
-    font-size: 2rem;
-    font-weight: 800;
+.header__title{
+    padding: 0.5rem 1rem;
+    font-size: 3rem;
+    font-weight: 900;
 }
