--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -1,5 +1,29 @@
+//abstracts
+//absctracts 폴더는 프로젝트 전체에서 사용되는 모든 Sass 도구와 도우미를 담고 있다.
+//예를 들어 모든 전역 변수, 함수, mixin 및 표시자를 넣어주면 된다.
+
+
+//vendors
+//프로젝트에서 사용하는 외부 라이브러리 및 프레임워크의 모든 CSS 파일을 담고 있다.
 @import 'base/base.scss';
 
+//base
+//프로젝트의 상용구 코드라고 부를 수 있는 내용을 담고 있다. 
+//사이트 전반에 사용될 폰트,디폴트 스타일, 키프레임을 포함한 애니메이션이 여기에 해당된다.
 
+//layout
+//사이트 구조에 해당하는 레이아웃을 담는다. 
 @import './layout/header';
+@import './layout/mainContainer';
 
+//components
+//layout보다 더 작은 구성 요소들을 담고 있다.
+//즉, 소형 레이아웃 같은 의미로 사이트 내에서 재사용 가능한 작은 부분들을 의미한다.
+@import './components/sideContainer';
+@import './components/photoBox';
+ 
+//pages
+//모든 페이지가 동일한 스타일을 사용하지는 않기 때문에, 페이지 고유의 스타일이 있는 경우 페이지 이름을 딴 파일을 만들어서 이 폴더에 넣어 사용한다.
+
+//themes
+//대규모 사이트와 애플리케이션에는 다양한 모드의 테마를 사용하고는 하는데, 각 모드에 따라서 각기 다른 스타일을 지정하여 담아두는 곳이다.
