style: change layout (flex,grid)

--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -16,6 +16,7 @@
 @import './layout/header';
 @import './layout/flex';
 @import './layout/grid';
+@import './layout/footer';
 
 //components
 //layout보다 더 작은 구성 요소들을 담고 있다.
