--- a/src/sass/components/_sideContainer.scss
+++ b/src/sass/components/_sideContainer.scss
@@ -1,9 +1,9 @@
 .sideContainer{
-    width: 10%;
-    height: 120vh;
+
     font-size: large;
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: space-between;
+    flex-basis:25%;
 }
