--- a/src/sass/layout/_grid.scss
+++ b/src/sass/layout/_grid.scss
@@ -1,45 +1,46 @@
 .grid{
     width:70%;
-    height:80vh;
+    height:110vh;
     display: grid;
-    grid-template-columns: repeat(3, 1fr);
+    grid-template-columns: repeat(6, 1fr);
     grid-template-rows: repeat(3,1fr);
     font-weight: 553;
-    place-items:center center;
-
     .one,.four,.six{
         font-size: 4rem;
+        place-self:center center;
     }
     .two, .three, .five{
         font-size:2rem;
+        place-self: center center;
     }
     .one {
             grid-row: 1/2;
-            grid-column: 1/2;
+            grid-column: 2/3;
     }
 
     .two {
         grid-row: 1/2;
-        grid-column: 2/3;
+        grid-column: 3/5;
+        
     }
 
     .three {
         grid-row: 2/3;
-        grid-column: 1/2;
+        grid-column: 1/4;
     }
 
     .four {
         grid-row: 2/3;
-        grid-column: 2/3;
+        grid-column: 4/5;
     }
 
     .five {
         grid-row: 3/4;
-        grid-column: 2/3;
+        grid-column: 4/6;
     }
 
     .six {
         grid-row: 3/4;
-        grid-column: 3/4;
+        grid-column: 6/7;
     }
 }
