--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -5,11 +5,13 @@
 
 //vendors
 //프로젝트에서 사용하는 외부 라이브러리 및 프레임워크의 모든 CSS 파일을 담고 있다.
-@import 'base/base.scss';
+
 
 //base
 //프로젝트의 상용구 코드라고 부를 수 있는 내용을 담고 있다. 
 //사이트 전반에 사용될 폰트,디폴트 스타일, 키프레임을 포함한 애니메이션이 여기에 해당된다.
+@import 'base/base.scss';
+@import 'base/animations';
 
 //layout
 //사이트 구조에 해당하는 레이아웃을 담는다. 
