--- a/src/sass/layout/_grid.scss
+++ b/src/sass/layout/_grid.scss
@@ -12,21 +12,25 @@
     .two, .three, .five{
         font-size:2rem;
         place-self: center center;
+        margin-top:1.25rem;
     }
     .one {
             grid-row: 1/2;
             grid-column: 2/3;
+            
     }
 
     .two {
         grid-row: 1/2;
         grid-column: 3/5;
+        margin-right: 3.125rem;
         
     }
 
     .three {
         grid-row: 2/3;
         grid-column: 1/4;
+        margin-left:4.375rem;
     }
 
     .four {
@@ -37,6 +41,7 @@
     .five {
         grid-row: 3/4;
         grid-column: 4/6;
+        place-self: center right;
     }
 
     .six {
