--- a/src/sass/layout/_footer.scss
+++ b/src/sass/layout/_footer.scss
@@ -1,4 +1,10 @@
 .footer{
+    font-size:0.75rem;
+    opacity:0.5;
     width:100%;
-    height:80px;
+    height:5rem;
+    display:flex;
+    flex-direction:column;
+    justify-content:space-between;
+    align-items:center;
 }
