--- a/src/sass/components/_photoBox.scss
+++ b/src/sass/components/_photoBox.scss
@@ -3,14 +3,32 @@
 .photoBox{
     width: 5rem;
     height: 5rem;
-    transition: all 0.5s ease;
-    // background-image: linear-gradient(to right, #000000, #e74c3c);
-    // clip-path: polygon(25% 0%, 100% 0%, 75% 100%, 0% 100%);
-    // animation-name: change;
-    // animation-duration: 2s;
-    // animation-iteration-count: infinite;
     background-color: gray;
     overflow: hidden;
+    &:nth-child(3n+1){
+        animation-name: squareTriangleCircle;
+        animation-delay: 1.5s;
+        animation-timing-function: ease-in-out;
+        animation-duration: 2s;
+        animation-iteration-count: infinite;
+    }
+    &:nth-child(3n+2){
+        clip-path: polygon(50% 0, 50% 0, 100% 100%, 0% 100%);
+        animation-name: TriangleCircleSquare;
+        animation-delay: 1.5s;
+        animation-timing-function: ease-in-out;
+        animation-duration: 2s;
+        animation-iteration-count: infinite;
+    }
+    &:nth-child(3n+3) {
+        border-radius: 50%;
+        animation-name: CircleSquareTriangle;
+        animation-delay: 1.5s;
+        animation-timing-function: ease-in-out;
+        animation-duration: 2s;
+        animation-iteration-count: infinite;
+    }
+    
     img{
         max-width: 100%;
         height: auto;
