--- a/src/sass/layout/_footer.scss
+++ b/src/sass/layout/_footer.scss
@@ -1,10 +1,16 @@
 .footer{
-    font-size:0.75rem;
+    font-size:1rem;
+    font-size:1.25rem;
     opacity:0.5;
     width:100%;
     height:5rem;
+
     display:flex;
     flex-direction:column;
-    justify-content:space-between;
+    justify-content:flex-end;
     align-items:center;
+    position:relative;
+    top:1rem;
+
+        
 }
