--- a/src/sass/layout/_grid.scss
+++ b/src/sass/layout/_grid.scss
@@ -1,6 +1,6 @@
 .grid{
     width:70%;
-    height:110vh;
+    height:98vh;
     display: grid;
     grid-template-columns: repeat(6, 1fr);
     grid-template-rows: repeat(3,1fr);
@@ -8,29 +8,34 @@
     .one,.four,.six{
         font-size: 4rem;
         place-self:center center;
+        color:cadetblue;
+        cursor:pointer;
+        transition: color 0.5s ease-in-out;
+        &:hover{
+            color:cornflowerblue;
+        }
     }
     .two, .three, .five{
         font-size:2rem;
         place-self: center center;
-        margin-top:1.25rem;
+        margin-top:0.75rem;
     }
     .one {
             grid-row: 1/2;
-            grid-column: 2/3;
-            
+            grid-column: 2/3;   
     }
 
     .two {
         grid-row: 1/2;
         grid-column: 3/5;
         margin-right: 3.125rem;
-        
+        margin-top:0.8rem; 
     }
 
     .three {
         grid-row: 2/3;
         grid-column: 1/4;
-        margin-left:4.375rem;
+        margin-left:8rem;
     }
 
     .four {
@@ -40,7 +45,7 @@
 
     .five {
         grid-row: 3/4;
-        grid-column: 4/6;
+        grid-column: 3/6;
         place-self: center right;
     }
 
