--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -24,7 +24,7 @@
 //layout보다 더 작은 구성 요소들을 담고 있다.
 //즉, 소형 레이아웃 같은 의미로 사이트 내에서 재사용 가능한 작은 부분들을 의미한다.
 @import './components/sideContainer';
-@import './components/photoBox';
+@import './components/shapeBox';
 
 //pages
 //모든 페이지가 동일한 스타일을 사용하지는 않기 때문에, 페이지 고유의 스타일이 있는 경우 페이지 이름을 딴 파일을 만들어서 이 폴더에 넣어 사용한다.
