--- a/src/sass/base/_base.scss
+++ b/src/sass/base/_base.scss
@@ -133,3 +133,12 @@ table {
     border-collapse: collapse;
     border-spacing: 0;
 }
+button {
+    background: transparent;
+    border: none;
+    color: inherit;
+    padding: 0;
+    font: inherit;
+    cursor: pointer;
+}
+
