--- a/src/sass/components/_shapeBox.scss
+++ b/src/sass/components/_shapeBox.scss
@@ -3,8 +3,8 @@
     height: 5rem;
     overflow: hidden;
     &:nth-child(3n+1){
-        background-color:yellow;
-        animation-name: squareTriangleCircle;
+        background-color:#0F2027;
+        animation-name: change-square-triangle-circle;
         animation-delay: 1.5s;
         animation-timing-function: ease-in-out;
         animation-duration: 6s;
@@ -12,17 +12,17 @@
     }
     &:nth-child(3n+2){
         clip-path: polygon(50% 0, 50% 0, 100% 100%, 0% 100%);
-        background-color: red;
-        animation-name: TriangleCircleSquare;
+        background-color: #203A43;
+        animation-name: change-triangle-circle-square;
         animation-delay: 1.5s;
         animation-timing-function: ease-in-out;
         animation-duration: 6s;
         animation-iteration-count: infinite;
     }
     &:nth-child(3n+3) {
-        background-color:royalblue;
+        background-color:#2C5364;
         border-radius: 50%;
-        animation-name: CircleSquareTriangle;
+        animation-name: change-circle-square-triangle;
         animation-delay: 1.5s;
         animation-timing-function: ease-in-out;
         animation-duration: 6s;
