--- a/src/sass/layout/_header.scss
+++ b/src/sass/layout/_header.scss
@@ -1,8 +1,11 @@
 .header{
+    
     .title{
+    color:white;
     padding: 2rem 2rem 3rem;
     font-size: 3rem;
     font-weight: 900;
-    -webkit-text-stroke: 1px yellow;
+    -webkit-text-stroke: 1px black;
+    text-shadow: 0 0 3vh black;
     }
 }
