--- a/src/sass/components/_shapeBox.scss
+++ b/src/sass/components/_shapeBox.scss
@@ -1,3 +1,5 @@
+@import '../abstracts/mixins.scss';
+
 .shapeBox{
     width: 5rem;
     height: 5rem;
@@ -5,28 +7,19 @@
     &:nth-child(3n+1){
         background-color:#0F2027;
         animation-name: change-square-triangle-circle;
-        animation-delay: 1.5s;
-        animation-timing-function: ease-in-out;
-        animation-duration: 6s;
-        animation-iteration-count: infinite;
+        @include animation-option;
     }
     &:nth-child(3n+2){
         clip-path: polygon(50% 0, 50% 0, 100% 100%, 0% 100%);
         background-color: #203A43;
         animation-name: change-triangle-circle-square;
-        animation-delay: 1.5s;
-        animation-timing-function: ease-in-out;
-        animation-duration: 6s;
-        animation-iteration-count: infinite;
+        @include animation-option;
     }
     &:nth-child(3n+3) {
         background-color:#2C5364;
         border-radius: 50%;
         animation-name: change-circle-square-triangle;
-        animation-delay: 1.5s;
-        animation-timing-function: ease-in-out;
-        animation-duration: 6s;
-        animation-iteration-count: infinite;
+        @include animation-option;
     }
     
     img{
