--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -2,6 +2,7 @@
 //absctracts 폴더는 프로젝트 전체에서 사용되는 모든 Sass 도구와 도우미를 담고 있다.
 //예를 들어 모든 전역 변수, 함수, mixin 및 표시자를 넣어주면 된다.
 @import 'abstracts/variables';
+@import 'abstracts/mixins';
 
 //vendors
 //프로젝트에서 사용하는 외부 라이브러리 및 프레임워크의 모든 CSS 파일을 담고 있다.
