--- a/src/sass/layout/_grid.scss
+++ b/src/sass/layout/_grid.scss
@@ -1,3 +1,6 @@
+$btns:(btn1,btn2,btn3);
+$texts:(text1,text2,text3);
+
 .grid{
     width:70%;
     height:98vh;
@@ -6,51 +9,54 @@
     grid-template-rows: repeat(3,1fr);
     font-weight: 553;
 
-    .one,.four,.six{
-        font-size: 4rem;
-        place-self:center center;
-        color:cadetblue;
-        transition: color 0.5s ease-in-out;
-        &:hover{
-            color:cornflowerblue;
+    @each $btn in $btns{
+        .#{$btn}{
+            font-size: 4rem;
+            place-self: center center;
+            color: cadetblue;
+            transition: color 0.5s ease-in-out;
+        
+            &:hover {
+                color: cornflowerblue;
+            }
         }
     }
-    .two, .three, .five{
-        font-size:2rem;
-        place-self: center center;
-        margin-top:0.75rem;
-    }
-    .one {
-            grid-row: 1/2;
-            grid-column: 2/3;   
+    @each $text in $texts{
+        .#{$text}{
+            font-size: 2rem;
+            place-self: center center;
+            margin-top: 0.75rem;
+        }
     }
 
-    .two {
-        grid-row: 1/2;
-        grid-column: 3/5;
+    
+    .btn1 {
+        @include grid-item-location(1,2,2,3); 
+    }
+
+    .text1 {
+        @include grid-item-location(1, 2, 3, 5);
         margin-right: 3.125rem;
         margin-top:0.8rem; 
     }
 
-    .three {
-        grid-row: 2/3;
-        grid-column: 1/4;
+    .text2 {
+        @include grid-item-location(2, 3, 1, 4);
         margin-left:8rem;
     }
 
-    .four {
-        grid-row: 2/3;
-        grid-column: 4/5;
+    .btn2{
+        @include grid-item-location(2, 3, 4, 5);
     }
 
-    .five {
-        grid-row: 3/4;
-        grid-column: 3/6;
+    .text3 {
+        @include grid-item-location(3,4,3,6);
         place-self: center right;
     }
 
-    .six {
-        grid-row: 3/4;
-        grid-column: 6/7;
+    .btn3 {
+        @include grid-item-location(3,4,6,7);
     }
+
+
 }
