--- a/src/sass/components/_Modal.scss
+++ b/src/sass/components/_Modal.scss
@@ -1,4 +1,4 @@
-.modalContainer{
+.modalBackground{
     z-index:10;
     width:100%;
     height: 155vh;
@@ -9,13 +9,41 @@
     display:flex;
     justify-content: center;
     align-items: center;
-    .modalBorder{
+
+    .closeBtn{
+        position:absolute;
+        top:2rem;
+        right:3rem;
+        width:3rem;
+        height:3rem;
+        
+    }
+    .modalContainer{
+        
         .modal {
-            background-color: white;
+            box-shadow:0 0 5vh rgb(228, 223, 124);
+            border: 7px solid rgb(228, 223, 124,0.9);
             z-index: 100;
-            padding: 2rem;
+            margin: 2rem;
             width: 60vw;
             height: 60vw;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            .innerCircle{
+                background-color: white;
+                width:90%;
+                height:90%;
+                display: flex;
+                justify-content: center;
+                align-items: center;
+                div{
+                    width:70%;
+                    height:70%;
+                    box-sizing:border-box;
+
+                };
+            }
     
         }
     }
