--- a/src/sass/components/_sideContainer.scss
+++ b/src/sass/components/_sideContainer.scss
@@ -1,10 +1,9 @@
 .sideContainer{
-    font-size: large;
+
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content:center;
     justify-content: space-between;
-    flex-basis:25%;
-
+    width:25%;
 }
