--- a/src/sass/layout/_header.scss
+++ b/src/sass/layout/_header.scss
@@ -5,7 +5,7 @@
     padding: 2rem 2rem 3rem;
     font-size: 3rem;
     font-weight: 900;
-    -webkit-text-stroke: 1px black;
-    text-shadow: 0 0 3vh black;
+    -webkit-text-stroke: 2px rgb(228, 223, 124);
+    text-shadow: 0 0 1.5vh rgb(228, 223, 124);
     }
 }
