--- a/src/sass/layout/_flex.scss
+++ b/src/sass/layout/_flex.scss
@@ -1,8 +1,8 @@
 .flex{
     gap:1em;
     display:flex;
-    height:120vh;
     justify-content:space-between;
+    align-items: center;
     flex-wrap:nowrap;
 
 }
