--- a/src/sass/components/_shapeBox.scss
+++ b/src/sass/components/_shapeBox.scss
@@ -2,6 +2,7 @@
     width: 5rem;
     height: 5rem;
     overflow: hidden;
+    place-self: center center;
     &:nth-child(3n+1){
         background-color:#0F2027;
         animation-name: change-square-triangle-circle;
@@ -20,10 +21,5 @@
         @include animation-option;
     }
     
-    img{
-        max-width: 100%;
-        height: auto;
-        display: block;
-    }
-
+    
 }
