--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -4,6 +4,7 @@
 @import 'abstracts/variables';
 @import 'abstracts/mixins';
 
+
 //vendors
 //프로젝트에서 사용하는 외부 라이브러리 및 프레임워크의 모든 CSS 파일을 담고 있다.
 
@@ -18,7 +19,7 @@
 //사이트 구조에 해당하는 레이아웃을 담는다. 
 @import './layout/header';
 @import './layout/flex';
-@import './layout/grid';
+@import './layout/mainGrid';
 @import './layout/footer';
 
 //components
