--- a/src/sass/layout/_footer.scss
+++ b/src/sass/layout/_footer.scss
@@ -1,12 +1,12 @@
 .footer{
-    font-size:1rem;
+    font-weight:600;
     font-size:1.25rem;
-    opacity:0.5;
-    width:100%;
     height:5rem;
+    transform:translateX(5rem);
 
+    color:white;
     display:flex;
     flex-direction:column;
-    justify-content:flex-end;
-    align-items:center;
+    justify-content:space-between;
+
 }
