--- a/src/sass/components/_shapeBox.scss
+++ b/src/sass/components/_shapeBox.scss
@@ -3,19 +3,17 @@
     height: 3rem;
     overflow: hidden;
     place-self: center center;
+    background-color:white;
     &:nth-child(3n+1){
-        background-color:#0F2027;
         animation-name: change-square-triangle-circle;
         @include animation-option;
     }
     &:nth-child(3n+2){
         clip-path: polygon(50% 0, 50% 0, 100% 100%, 0% 100%);
-        background-color: #203A43;
         animation-name: change-triangle-circle-square;
         @include animation-option;
     }
     &:nth-child(3n+3) {
-        background-color:#2C5364;
         border-radius: 50%;
         animation-name: change-circle-square-triangle;
         @include animation-option;
