--- a/src/sass/components/_sideContainer.scss
+++ b/src/sass/components/_sideContainer.scss
@@ -1,15 +1,36 @@
 
 .leftSideContainer{
-    @include side-container('left');
-}
-.rightSideContainer{
-    @include side-container('right');
-    .shapeBox{
-        @for $i from 1 through 15 {
-            &:nth-child(#{$i}) {
-                grid-row-start:-#{$i};
-            }
-        }
+    width: 20%;
+    height:inherit;
+    z-index: 50;
+    margin-bottom:1.6rem;
+    .leftSideGrid {
+        display: grid;
+        grid-template-columns:1fr;
+        grid-template-rows: repeat(8, 1fr);
+        grid-auto-flow:rows;
+        gap: 1rem;
     }
+}
 
+.rightSideContainer{
+    width: 20%;
+    height: inherit;
+    z-index: 50;
+    margin-bottom: 1.6rem;
+    overflow: hidden;
+    .smallRoseImg{
+        top:0;
+        transform:translateX(10px);
+        width:12rem;
+        height:12rem;
+        
+    }
+    .rightSideGrid{
+        display: grid;
+        grid-template-columns: repeat(1, 1fr);
+        grid-template-rows: repeat(5, 1fr);
+        grid-auto-flow: rows;
+        gap: 1rem;
+    }
 }
