--- a/src/sass/layout/_header.scss
+++ b/src/sass/layout/_header.scss
@@ -1,14 +1,16 @@
 .header{
+    display:flex;
+    justify-content: space-between;
+    align-items:center;
+    height:12vh;
+    padding:1.5rem 3rem;
+    background:black;
+    position:relative;
     .title{
-        position: absolute;
-        top:0rem;
-        right:2rem;
         color:white;
-        padding:0.5rem;
-        margin: 1.5rem;
-        font-size: 3rem;
-        font-weight: 900;
-        text-shadow: 0 0 0.8vh rgb(255, 255, 255);
-        z-index:10;
+        font-size: 2.5rem;
+        font-weight:500;
+        letter-spacing: 0.2rem;
+        //text-shadow: 0 0 0.8vh rgb(255, 255, 255);
     }
 }
