--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -18,9 +18,8 @@
 //layout
 //사이트 구조에 해당하는 레이아웃을 담는다. 
 @import './layout/header';
-@import './layout/flex';
-@import './layout/mainGrid';
-@import './layout/footer';
+@import './layout/mainFlexbox';
+
 
 //components
 //layout보다 더 작은 구성 요소들을 담고 있다.
@@ -28,10 +27,15 @@
 @import './components/sideContainer';
 @import './components/shapeBox';
 @import './components/Modal';
+@import './components/contact';
+@import './components/homeContentsContainer';
+@import './components/sirsContentsContainer';
+@import './components/irsContentsContainer';
+@import './components/irContentsContainer';
 
 //pages
 //모든 페이지가 동일한 스타일을 사용하지는 않기 때문에, 페이지 고유의 스타일이 있는 경우 페이지 이름을 딴 파일을 만들어서 이 폴더에 넣어 사용한다.
-@import './pages/mainPage';
+
 
 //themes
 //대규모 사이트와 애플리케이션에는 다양한 모드의 테마를 사용하고는 하는데, 각 모드에 따라서 각기 다른 스타일을 지정하여 담아두는 곳이다.
