--- a/src/sass/layout/_header.scss
+++ b/src/sass/layout/_header.scss
@@ -5,7 +5,7 @@
     height:12vh;
     padding:1.5rem 3rem;
     background:black;
-    position:relative;
+    //position:relative;
     .title{
         color:white;
         font-size: 2.5rem;
