--- a/src/sass/components/_irContentsContainer.scss
+++ b/src/sass/components/_irContentsContainer.scss
@@ -1,5 +1,4 @@
 .irContentsContainer {
-    width: 100%;
-        height: 150vh;
-        color: white;
+    @extend .contentsContainer;
+    height: 150vh;
 }
