--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -14,17 +14,18 @@
 //사이트 전반에 사용될 폰트,디폴트 스타일, 키프레임을 포함한 애니메이션이 여기에 해당된다.
 @import 'base/base';
 @import 'base/animations';
+@import 'base/sideContainer';
+@import 'base/contentsContainer';
 
 //layout
 //사이트 구조에 해당하는 레이아웃을 담는다. 
 @import './layout/header';
 @import './layout/mainFlexbox';
-
+@import './layout/navigator';
 
 //components
 //layout보다 더 작은 구성 요소들을 담고 있다.
 //즉, 소형 레이아웃 같은 의미로 사이트 내에서 재사용 가능한 작은 부분들을 의미한다.
-@import './components/sideContainer';
 @import './components/shapeBox';
 @import './components/Modal';
 @import './components/contact';
