--- a/src/sass/abstracts/_variables.scss
+++ b/src/sass/abstracts/_variables.scss
@@ -5,3 +5,9 @@ $desktop-size:1024px;
 
 /*default contentsContainer height*/
 $default-height:80vh;
+
+/*default font size*/
+ $default-font-size:1.5rem;
+
+/*default line height*/
+$default-line-height:2rem;
