--- a/src/sass/components/_irContentsContainer.scss
+++ b/src/sass/components/_irContentsContainer.scss
@@ -1,4 +1,38 @@
 .irContentsContainer {
     @extend .contentsContainer;
-    height: 150vh;
+    height: $default-height;
+    .irParagraphContainer{
+        display:flex;
+        flex-direction:column;
+        justify-content: space-between;
+        width:100%;
+        height:40vh;
+        
+        .irParagraph{
+            font-size:$default-font-size;;
+            line-height: $default-line-height;
+            .irParagraphTitle{
+                position:relative;
+
+                .irCircle {
+                    transform:translate(5px,3px);
+                    display: inline-block;
+                    width: 1.5rem;
+                    height: 1.5rem;
+                    border-radius: 50%;
+                    &.backgroundTeal{
+                        background-color: teal;
+                    }
+                    &.backgroundLightgrey{
+                        background-color: lightgrey;
+                    }
+                    &.backgroundBurgundy{
+                        background: #800020;
+                    }
+                    
+                }
+            }
+            
+        }
+    }
 }
