--- a/src/sass/components/_irsContentsContainer.scss
+++ b/src/sass/components/_irsContentsContainer.scss
@@ -1,4 +1,35 @@
 .irsContentsContainer {
     @extend .contentsContainer;
-    height: 150vh;
+    height: $default-height;
+    .irsSection{
+        display:flex;
+        .irsImgContainer {
+            width: 25rem;
+            height: 25rem;
+            img {
+               width:100%;
+               box-sizing:border-box;
+            }
+        }
+        .irsParagraphContainer{
+            width:50%;
+            margin: 1rem;
+            font-size: $default-font-size;
+            line-height: $default-line-height;
+        }
+    }
+    .irsImgContainer2{
+        position:absolute;
+        top:18rem;
+        right:0rem;
+        display:flex;
+        width:80%;
+        justify-content:space-between;
+        width: 40rem;
+        height: 12rem;
+        img{
+            width:32%;
+        }
+    }
+    
 }
