--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -16,6 +16,7 @@
 @import 'base/animations';
 @import 'base/sideContainer';
 @import 'base/contentsContainer';
+@import 'base/defaultImgItemOption';
 
 //layout
 //사이트 구조에 해당하는 레이아웃을 담는다. 
