--- a/src/sass/components/_sirsContentsContainer.scss
+++ b/src/sass/components/_sirsContentsContainer.scss
@@ -1,6 +1,13 @@
+$images: (
+    'imgItem1':'https://source.unsplash.com/random/400X400/?purple',
+    'imgItem2':'https://source.unsplash.com/random/400×400/?blue',
+);
+
 .sirsContentsContainer{
+    @include set-images($images);
+
     @extend .contentsContainer;
-    height:$default-height;
+    
     .sirsImgBoxesContainer{
         margin:1rem 1rem;
         width: 95%;
@@ -10,19 +17,10 @@
         .sirsImgBoxLarge{
             width: 60%;
             height: 100%;
-            .imgItem {
-                @extend .defaultImgItemOption;
-                background-image: url('https://source.unsplash.com/random/400×400/?blue');
-                
-            }
         }
         .sirsImgBoxSmall{
             width: 35%;
             height: 85%;
-            .imgItem{
-                @extend .defaultImgItemOption;
-                background-image: url('https://source.unsplash.com/random/400×400/?blue');
-            }
         }
     }
     .sirsParagraphContainer{
