refactor: editing location of some page's components to add thumbnail grid

--- a/src/sass/components/_irContentsContainer.scss
+++ b/src/sass/components/_irContentsContainer.scss
@@ -1,7 +1,7 @@
 .irContentsContainer {
     @extend .contentsContainer;
-    height: $default-height;
     .irParagraphContainer{
+        margin-bottom:20rem;
         display:flex;
         flex-direction:column;
         justify-content: space-between;
